--- a/css/style.css
+++ b/css/style.css
@@ -1754,3 +1754,61 @@ input:focus,
     margin-bottom: 25px;
     margin-top: 15px;
 }
+
+
+
+.container245{
+    width: 100%;
+    height: 250px !important;
+   
+background-position: center;
+background-size: cover;
+background-repeat: no-repeat;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+background-color: #0c0920;
+}
+
+.search-bar{
+    width: 100%;
+background: rgba(255, 255, 255,0.2);
+display: flex;
+align-items: center;
+border-radius: 60px;
+padding: 8px 20px;
+backdrop-filter: blur(4px) saturate(180%);
+margin-top: 0;
+}
+.search-bar input{
+    background: transparent;
+    flex: 1;
+    border: 0;
+    outline: none;
+    padding: 24px 30px;
+    font-size: 20px;
+    color: #cac7ff;
+
+}
+::placeholder{
+    color: #cac7ff;
+
+}
+.search-bar img{
+    width: 25px;
+
+}
+.search-bar button{
+    border: 0;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+background:#9c7c38 ;
+cursor: pointer;
+}
+.hov:hover{
+    background-color: #9c7c38;
+    padding: 8px;
+    border-radius: 15px;
+}
